# kitchenai-labs

./: .gitignore  README.md
.devcontainer/: Dockerfile  create-notebook-venv.sh  devcontainer.json
evals-for-lab/: .deepeval-cache.json  .deepeval_telemtry.txt  README.md  pyproject.toml
evals-for-lab/.vector_db/advertising-rfp/: chroma.sqlite3
evals-for-lab/results/: openai.md
evals-for-lab/src/: kitchenai-labs-evals.py
evals-for-lab/src/data/: advertising-rfp.md  construction-rfp.md  consultancy-rfp.md
evals-for-lab/synthetic_data/: 20250128_005501.json  20250128_010007.json  20250128_123453.json  20250128_123909.json  20250128_130754.json  20250128_132418.json
evals-for-lab/synthetic_data_with_test_cases/: 20250128_022644.json
examples/knowledge-agent/: knowledge-agent.ipynb
is_rag_dead/: .deepeval_telemetry.txt  README.md  notebook.ipynb
is_rag_dead/synthetic_data/: 20250210_104731.json
llama-index/: requirements.txt
llama-index/agent/: agent_builder.ipynb  toolhouse_llamaindex.ipynb
llama-index/agent/whisk_enabled/: openai_assistant_agent_whisk.ipynb  react_agent_with_query_engine.ipynb  structured_planner.ipynb
